Added history templates Fixed a number of history code misalignment's